# utfpr-icsb60-exercises

./: .gitignore  compose.yaml
exercises/exercise-03/java/: .gitignore  pom.xml
exercises/exercise-03/java/src/main/java/dev/thiagotoyomoto/icsb60/: Main.java
exercises/exercise-03/java/src/main/java/dev/thiagotoyomoto/icsb60/documents/: Address.java  Grade.java  OffsetDateTimeCodec.java  Restaurant.java
exercises/exercise-03/python/: .tool-versions  main.py  pyproject.toml
exercises/exercise-03/python/documents/: address.py  grade.py  restaurant.py
exercises/exercise-04/employees/: departments.json  employees.json
exercises/exercise-04/tpc-h/: customers.json  orders.json
mysql/: large-dataset.sql
